
MiniTemplator Changes (Java version)
------------------------------------

2011-05-17 chdh
Directory structure changed to make it Maven compliant.

2010-10-30 chdh
Error corrected: When the conditionFlags set was empty or null, the
block of an IF statement in the form "$if !flag" was not included
in the output.

2010-09-29 chdh
Convenience methods MiniTemplator.setVariable(String, int) and
setVariableOpt(String, int) added.

2010-02-19 chdh
Protected method MiniTemplator.newInstance() added to enable
subclasses of MiniTemplator to survive cloneReset().

2009-04-15 chdh
The complement ("not") operator "!" may now be used in the flag
expressions of the $if and $elseif commands.

2009-01-25 chdh
New constructor MiniTemplator(String) added.
Note that this constructor is not compatible with the old (prior to
2007-05-19) constructor with the same signature, because the old
constructor with that signature expected the template string in the
string argument instead of the file name.
The nested exceptions (TemplateSyntaxException,
VariableNotDefinedException and BlockNotDefinedException) are now
derived from RuntimeException instead of Exception, to make them
unchecked exceptions that do not have to be catched or declared.
Convenience methods added: setVariableOpt(String, String),
setVariableOptEsc(String, String) and addBlockOpt(String).
EPL license added.

2009-01-22 chdh
Method getVariables() added.

2007-05-19 chdh
Conditional blocks ($if statement) implemented.
New nested class {@link MiniTemplator.TemplateSpecification}.
Old constructors replaced by the new general constructor
MiniTemplator(TemplateSpecification).
Parameter type of generateOutput(String) changed form File to String.
Second MiniTemplatorCache constructor removed.
Parameters of MiniTemplatorCache.get() method changed.

2006-10-18 chdh
New variant of addBlock() added with an isOptional parameter.

2006-07-07 chdh
Extended MiniTemplator and MiniTemplatorCache constructors with
charset argument added.
